basic game theory

--- a/ml/0_basic_game_theory.ipynb
+++ b/ml/0_basic_game_theory.ipynb
@@ -2,6 +2,354 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>\n",
+    "\n",
+    "# Game forms\n",
+    "---\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "### Normal form\n",
+    "\n",
+    "Represent the game as a matrix (for 2 players) where each pure-strategy (for one-stage game, the strategy is just a single action) appears on the side of the matrix and the payoff for each pair of player-strategy is shown in the cells, separated with a slash:\n",
+    "\n",
+    "<div style=\"width:80%\">\n",
+    "    <div style=\"width:33%;float:left;\">\n",
+    "        <div style=\"text-align:center\">Prisonner's dilema</div>\n",
+    "        <table style=\"text-align:center;width:150px;margin-left:auto;margin-right:auto\">\n",
+    "          <tr>\n",
+    "            <th></th>\n",
+    "            <th>D</th>\n",
+    "            <th>S</th>\n",
+    "          </tr>\n",
+    "          <tr>\n",
+    "            <th>D</th>\n",
+    "            <td>-4/-4</td>\n",
+    "            <td>0/-5</td>\n",
+    "          </tr>\n",
+    "          <tr>\n",
+    "            <th>S</th>\n",
+    "            <td>-5/0</td>\n",
+    "            <td>-1/-1</td>\n",
+    "          </tr>\n",
+    "        </table>\n",
+    "    </div>\n",
+    "    <div style=\"width:33%;float:left;\">\n",
+    "        <div style=\"text-align:center\">Matching pennies</div>\n",
+    "        <table style=\"text-align:center;width:150px;margin-left:auto;margin-right:auto\">\n",
+    "          <tr>\n",
+    "            <th></th>\n",
+    "            <th>A</th>\n",
+    "            <th>B</th>\n",
+    "          </tr>\n",
+    "          <tr>\n",
+    "            <th>A</th>\n",
+    "            <td>1/-1</td>\n",
+    "            <td>-1/1</td>\n",
+    "          </tr>\n",
+    "          <tr>\n",
+    "            <th>B</th>\n",
+    "            <td>-1/1</td>\n",
+    "            <td>1/-1</td>\n",
+    "          </tr>\n",
+    "        </table>\n",
+    "    </div>\n",
+    "    <div style=\"width:33%;float:right;\">\n",
+    "        <div style=\"text-align:center\">Battle of sexes</div>\n",
+    "        <table style=\"text-align:center;width:150px;margin-left:auto;margin-right:auto\">\n",
+    "          <tr>\n",
+    "            <th></th>\n",
+    "            <th>O</th>\n",
+    "            <th>F</th>\n",
+    "          </tr>\n",
+    "          <tr>\n",
+    "            <th>O</th>\n",
+    "            <td>2/1</td>\n",
+    "            <td>0/0</td>\n",
+    "          </tr>\n",
+    "          <tr>\n",
+    "            <th>F</th>\n",
+    "            <td>0/0</td>\n",
+    "            <td>1/2</td>\n",
+    "          </tr>\n",
+    "        </table>\n",
+    "    </div>\n",
+    "</div>\n",
+    "\n",
+    "In the prisonner's dilemna, **D** is the denouce option and **S** is the silence option. The matching pennies example is such that the player 1 wins if both action matches and loses otherwise. The Battle of Sexes is a cooperation game in which both player want to go the same place, either **O** for operator or **F** for football club.\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "### Extended form\n",
+    "\n",
+    "The extended form of a game is a **game tree** representation of a game particularly useful when the game is made of several stages, or when the actions are sequential and not simultaneous.\n",
+    "\n",
+    "* Each node in the circle corresponds to a player choice of move (or a chance node if chance is involved)\n",
+    "* Each leaf correspond to a payoff (the cumulative result at the end of the game)\n",
+    "* Labels along the edges represent the actions performed by the players\n",
+    "* Dash lines between node represent uncertainty about which of the states we are in\n",
+    "\n",
+    "![title](img/ExtendedForm.png)\n",
+    "\n",
+    "An **information set** is information available to a player at a given stage of the game to make its decision for the next action. A singleton information set contains the exact identifier of the node (the player has knowledge about the past). Dash lines represent uncertainty about the state and correspond to information set with several state identifiers inside them.\n",
+    "\n",
+    "Erasing information about past move allows **simultaneous moves** games encoded as extended forms, while preserving the state information allows to represent **sequential move** games.\n",
+    "\n",
+    "*Note: For each extended form, there is an equivalent unique normal form (where each strategy on the side is the path in the game tree), but not the other way around.*\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "### Types of games\n",
+    "\n",
+    "A **perfect information game** is a game in which the extended form does not contain any uncertainly regarding the information set (each player knows the past) and does not contain any chance node. Games that do not fulfil these requirements are called **imperfect information games**.\n",
+    "\n",
+    "**Static game** are games in which the actions of the players does not influence the actions of the other player. Typically, these are one-stage games with simulatenous moves like the ones shown above. **Dynamic games** are multi-stage games in which the actions are not the same depending on the past (exemple of Chess, Go). These games are necessarily partially sequential.\n",
+    "\n",
+    "**Multi stage games** are games composed of a series of independent sub-games (for instance, playing prisoner's dilema followed by matching pennies). **Repeated games** are multi-stage games where we repeat the same sub-game."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>\n",
+    "\n",
+    "# Solving one-stage static games\n",
+    "---\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "### Stategy and Mixed Strategy\n",
+    "\n",
+    " A **pure strategy** for a game is a function that returns the action to play for each information set. A **mixed strategy** is a distribution of probability over a selection of pure strategy. A **behavioral strategy** is a function that returns a probability distribution of actions to play for each information set. It turns out that mixed strategies and behavioral strategies are mostly equivalent: we can always represent one with the other.\n",
+    "\n",
+    "The **Pareto Optimum** of a game is the combination of strategy that would lead to the best outcome for both players. For instance in the prisoner dilema is the stay silent for both player. Unfortunately, strategies that lead to this optimum do not necessarily correspond to what players would play because the best interest solution does not entail the general overal good.\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "### Dominance and Best response\n",
+    "\n",
+    "A **strictly dominated** strategy is such that another strategy is stricly better whatever what the opponents play. A player should never play a strictly dominated strategy, at least in single stage games (we will see later for multi-stage games). Eliminated recursively strictly dominated strategies can sometimes lead to a single resulting pure strategy:\n",
+    "\n",
+    "<div style=\"width:80%\">\n",
+    "    <div style=\"width:33%;float:left;\">\n",
+    "        <table style=\"text-align:center;width:150px;margin-left:auto;margin-right:auto\">\n",
+    "          <tr>\n",
+    "            <th></th>\n",
+    "            <th>A</th>\n",
+    "            <th>B</th>\n",
+    "          </tr>\n",
+    "          <tr>\n",
+    "            <th>C</th>\n",
+    "            <td>4/2</td>\n",
+    "            <td>5/3</td>\n",
+    "          </tr>\n",
+    "          <tr>\n",
+    "            <th>D</th>\n",
+    "            <td>5/4</td>\n",
+    "            <td>6/0</td>\n",
+    "          </tr>\n",
+    "        </table>\n",
+    "    </div>\n",
+    "    <div style=\"width:33%;float:left;\">\n",
+    "        <table style=\"text-align:center;width:150px;margin-left:auto;margin-right:auto\">\n",
+    "          <tr>\n",
+    "            <th></th>\n",
+    "            <th>A</th>\n",
+    "            <th>B</th>\n",
+    "          </tr>\n",
+    "          <tr>\n",
+    "            <th><strike>&nbsp;C&nbsp;</strike></th>\n",
+    "            <td><strike>4/2</strike></td>\n",
+    "            <td><strike>5/3</strike></td>\n",
+    "          </tr>\n",
+    "          <tr>\n",
+    "            <th>D</th>\n",
+    "            <td>5/4</td>\n",
+    "            <td>6/0</td>\n",
+    "          </tr>\n",
+    "        </table>\n",
+    "    </div>\n",
+    "    <div style=\"width:33%;float:right;\">\n",
+    "        <table style=\"text-align:center;width:150px;margin-left:auto;margin-right:auto\">\n",
+    "          <tr>\n",
+    "            <th></th>\n",
+    "            <th>A</th>\n",
+    "            <th><strike>&nbsp;B&nbsp;</strike></th>\n",
+    "          </tr>\n",
+    "          <tr>\n",
+    "            <th><strike>&nbsp;C&nbsp;</strike></th>\n",
+    "            <td><strike>4/2</strike></td>\n",
+    "            <td><strike>5/3</strike></td>\n",
+    "          </tr>\n",
+    "          <tr>\n",
+    "            <th>D</th>\n",
+    "            <td>5/4</td>\n",
+    "            <td><strike>6/0</strike></td>\n",
+    "          </tr>\n",
+    "        </table>\n",
+    "    </div>\n",
+    "</div>\n",
+    "\n",
+    "A **best response** to the opponent strategy is a strategy that is equal or better in payoff. After removing all the strictly dominated, the remaining strategies are always the best response to another strategy.\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "### Pure strategy Nash equilibrium\n",
+    "\n",
+    "A nash equilibrium corresponds to a pair of strategies that are **stable**:\n",
+    "\n",
+    "* if player 1 believes that player 2 will play his move then player 1 has no better response\n",
+    "* if player 2 believes that player 1 will play his move then player 2 has no better response\n",
+    "\n",
+    "There might be one pure strategy nash equilibrium (D-D for Prisoner's Dilema), several pure strategy nash equilibriums (O-O or F-F for the Battle of Sexes) or no pure strategy nash equilibrium (in matching pennies):\n",
+    "\n",
+    "<div style=\"width:80%\">\n",
+    "    <div style=\"width:33%;float:left;\">\n",
+    "        <div style=\"text-align:center\">Prisonner's dilema</div>\n",
+    "        <table style=\"text-align:center;width:150px;margin-left:auto;margin-right:auto\">\n",
+    "          <tr>\n",
+    "            <th></th>\n",
+    "            <th>D</th>\n",
+    "            <th>S</th>\n",
+    "          </tr>\n",
+    "          <tr>\n",
+    "            <th>D</th>\n",
+    "            <td><b>-4/-4</b></td>\n",
+    "            <td>0/-5</td>\n",
+    "          </tr>\n",
+    "          <tr>\n",
+    "            <th>S</th>\n",
+    "            <td>-5/0</td>\n",
+    "            <td>-1/-1</td>\n",
+    "          </tr>\n",
+    "        </table>\n",
+    "    </div>\n",
+    "    <div style=\"width:33%;float:left;\">\n",
+    "        <div style=\"text-align:center\">Matching pennies</div>\n",
+    "        <table style=\"text-align:center;width:150px;margin-left:auto;margin-right:auto\">\n",
+    "          <tr>\n",
+    "            <th></th>\n",
+    "            <th>A</th>\n",
+    "            <th>B</th>\n",
+    "          </tr>\n",
+    "          <tr>\n",
+    "            <th>A</th>\n",
+    "            <td>1/-1</td>\n",
+    "            <td>-1/1</td>\n",
+    "          </tr>\n",
+    "          <tr>\n",
+    "            <th>B</th>\n",
+    "            <td>-1/1</td>\n",
+    "            <td>1/-1</td>\n",
+    "          </tr>\n",
+    "        </table>\n",
+    "    </div>\n",
+    "    <div style=\"width:33%;float:right;\">\n",
+    "        <div style=\"text-align:center\">Battle of sexes</div>\n",
+    "        <table style=\"text-align:center;width:150px;margin-left:auto;margin-right:auto\">\n",
+    "          <tr>\n",
+    "            <th></th>\n",
+    "            <th>O</th>\n",
+    "            <th>F</th>\n",
+    "          </tr>\n",
+    "          <tr>\n",
+    "            <th>O</th>\n",
+    "            <td><b>2/1</b></td>\n",
+    "            <td>0/0</td>\n",
+    "          </tr>\n",
+    "          <tr>\n",
+    "            <th>F</th>\n",
+    "            <td>0/0</td>\n",
+    "            <td><b>1/2</b></td>\n",
+    "          </tr>\n",
+    "        </table>\n",
+    "    </div>\n",
+    "</div>\n",
+    "\n",
+    "Nash equilibrium correspond to a **stable pair of strategies** in the sense that **no player would like to deviate from his strategy if his belief of the opponent player the matching strategy is correct**. And they are quite easy to find: for each player look at the best possible action for each of the opponent strategy (look for the maximum payoff) and see when they match."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>\n",
+    "\n",
+    "### Mixed Nash equilibrium\n",
+    "\n",
+    "For some games, there are **mixed strategies Nash equilibrium**. For instance, in the matching pennies game, if we note $p$ and $q$ the probability of player 1 and 2 to play move $A$, then $(p=\\frac{1}{2}, q=\\frac{1}{2})$ is a mixed nash equilibrium:\n",
+    "\n",
+    "* player 1 would not benefit from increasing or decreasing $p$\n",
+    "* player 2 would not benefit from increasing or decreasing $q$\n",
+    "\n",
+    "Note that if either $p$ or $q$ would not be equal to one half, then the other player would have benefits in playing a pure strategy instead. The way to identify the mixed nash equilibrium here is therefore to solve for $p$ and $q$ to be such that playing A or B is indifferent for both player A and B.\n",
+    "\n",
+    "In general, we should look for combinations of move such that each move as the same expected payoff under the belief that the other player will play a given strategy or mixed strategy.\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "### Nash equilibrium vs Pareto optimum\n",
+    "\n",
+    "A **stable position does not mean that the outcome is the best for both players** (the pareto optimum). For instance, in the prisoner's dilema, the nash equilibrium is when both player denouce each other. Indeed, any other position is unstable:\n",
+    "\n",
+    "* if both are silent, one of them could benefit from talking\n",
+    "* if one is talking, the other should start talking as well\n",
+    "\n",
+    "If you think that this does not represent reality, it is either because the payoff do not represent your true values (not betraying your partners) or because you think in terms of a repeated game in which you are accountable for your bad actions and this might erode the trusts people have in you: in repeated games, it becomes possible to play something else than a Nash equilibrium.\n",
+    "\n",
+    "Similarly, a **mixed nash equilibrium does not necessarily have a better payoff than a pure-one**: for instance in Battle of the Sexes, the mixed Nash equilibrium would have a payoff of 1/1, which is less than the payoff of 2/1 or 1/2 of the pure Nash equilibrium.\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "### Continuous actions\n",
+    "\n",
+    "* example of the production or prices"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>\n",
+    "\n",
+    "# Dynamic games\n",
+    "---\n",
+    "\n",
+    "* backward induction (dynamic programming) for games with no chance\n",
+    "* sub-game perfect nash equilibrium\n",
+    "* one-stage un-improvable\n",
+    "* exemple of centipede: the nash strategy is not the \"best for both\" strategy (ex of prisonner's dilemna)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>\n",
+    "\n",
+    "# Multi-stage / repeated games\n",
+    "---\n",
+    "\n",
+    "* accountability\n",
+    "* should always finish by a nash equilibrium, but can bargain with it\n",
+    "* if several nash equilibrium at the end, you can use that to bargain (depend on the discounting factor)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
