--- a/ml/0_basic_utility_theory.ipynb
+++ b/ml/0_basic_utility_theory.ipynb
@@ -104,7 +104,9 @@
     "---\n",
     "\n",
     "* gathering information has a cost too: agent should only do it when increase in value\n",
-    "* the value of information is equal to the increase in expected value in our decision making"
+    "* the value of information is equal to the increase in expected value in our decision making\n",
+    "\n",
+    "Example of the value of a MBA."
    ]
   },
   {
