basic game theory

--- a/ml/0_basic_game_theory.ipynb
+++ b/ml/0_basic_game_theory.ipynb
@@ -88,7 +88,13 @@
     "    </div>\n",
     "</div>\n",
     "\n",
-    "In the prisonner's dilemna, **D** is the denouce option and **S** is the silence option. The matching pennies example is such that the player 1 wins if both action matches and loses otherwise. The Battle of Sexes is a cooperation game in which both player want to go the same place, either **O** for operator or **F** for football club.\n",
+    "In the prisonner's dilemna, **D** is the denouce option and **S** is the silence option:\n",
+    "\n",
+    "* If both player denouce each other, they get 4 years in prison each\n",
+    "* If one of them denouces the other, he gets out and the other one gets 5 years in prison.\n",
+    "* If they both keep silent, they get limited time in prison.\n",
+    "\n",
+    "The matching pennies example is such that the player 1 wins if both action matches and loses otherwise. Compared to the prisonner dilema, this is a non-cooperation game in which one of the two player must lose (like Chess). The Battle of Sexes is a cooperation game in which both player want to go the same place, either **O** for opera or **F** for football club, but both have different preferences for opera or football.\n",
     "\n",
     "<br>\n",
     "\n",
@@ -126,7 +132,7 @@
    "source": [
     "<br>\n",
     "\n",
-    "# Solving one-stage static games\n",
+    "# One-stage simultaneous games\n",
     "---\n",
     "\n",
     "<br>\n",
@@ -295,7 +301,7 @@
     "* player 1 would not benefit from increasing or decreasing $p$\n",
     "* player 2 would not benefit from increasing or decreasing $q$\n",
     "\n",
-    "Note that if either $p$ or $q$ would not be equal to one half, then the other player would have benefits in playing a pure strategy instead. The way to identify the mixed nash equilibrium here is therefore to solve for $p$ and $q$ to be such that playing A or B is indifferent for both player A and B.\n",
+    "Note that if either $p$ or $q$ would not be equal to one half, then the other player would have benefits in playing a pure strategy instead. The way to find mixed nash equilibriums here is therefore to solve for $p$ and $q$ to be such that playing A or B is indifferent for both player A and B: indeed **the only reason to mix strategies is if they both have the same payoff**.\n",
     "\n",
     "In general, we should look for combinations of move such that each move as the same expected payoff under the belief that the other player will play a given strategy or mixed strategy.\n",
     "\n",
@@ -310,13 +316,24 @@
     "\n",
     "If you think that this does not represent reality, it is either because the payoff do not represent your true values (not betraying your partners) or because you think in terms of a repeated game in which you are accountable for your bad actions and this might erode the trusts people have in you: in repeated games, it becomes possible to play something else than a Nash equilibrium.\n",
     "\n",
-    "Similarly, a **mixed nash equilibrium does not necessarily have a better payoff than a pure-one**: for instance in Battle of the Sexes, the mixed Nash equilibrium would have a payoff of 1/1, which is less than the payoff of 2/1 or 1/2 of the pure Nash equilibrium.\n",
+    "Similarly, a **mixed nash equilibrium does not necessarily have a better payoff than a pure-one**: for instance in Battle of the Sexes, the mixed Nash equilibrium would have a payoff of 1/1, which is less than the payoff of 2/1 or 1/2.\n",
     "\n",
     "<br>\n",
     "\n",
-    "### Continuous actions\n",
+    "### Continuous actions examples\n",
     "\n",
-    "* example of the production or prices"
+    "The Nash equilibrium also works for continuous actions, both for pure strategies and mixed strategies. For instance, we can play a game in which two companies fight for profit on the market by controlling their production $q_1$ and $q_2$:\n",
+    "\n",
+    "* The demand determines the price $p = 100 - q_1 - q_2$\n",
+    "* The marginal cost (cost of each new article) is $c$\n",
+    "\n",
+    "Each company wants to increase their own benefit $b_1$ and $b_2$ as much as possible. But the more they product, the lower the price of the goods, so they want to maximize the following quantities (which depend on the opponent production):\n",
+    "\n",
+    "&emsp; $b_1(q_1|q_2) = (100 - q_1 - q_2) \\, q_1 - c \\, q_1 \\implies \\nabla b_1 = 100 - 2 q_1 - q_2 - c = 0$\n",
+    "\n",
+    "&emsp; $b_2(q_2|q_1) = (100 - q_1 - q_2) \\, q_2 - c \\, q_2 \\implies \\nabla b_2 = 100 - q_1 - 2 q_2 - c = 0$\n",
+    "\n",
+    "From which we get: $\\displaystyle q_1 = q_2 = \\frac{100 - c}{3}$. For a cost of 10, this means producing 30 pieces each."
    ]
   },
   {
@@ -325,13 +342,65 @@
    "source": [
     "<br>\n",
     "\n",
-    "# Dynamic games\n",
+    "# Solving sequential perfect information games\n",
     "---\n",
     "\n",
-    "* backward induction (dynamic programming) for games with no chance\n",
-    "* sub-game perfect nash equilibrium\n",
-    "* one-stage un-improvable\n",
-    "* exemple of centipede: the nash strategy is not the \"best for both\" strategy (ex of prisonner's dilemna)"
+    "When moves are no more simultaneous be sequential, no chance is involved, and each player remember each move has been taken (that is, all players know the current state of the game perfectly).\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "### Sub-games\n",
+    "\n",
+    "A **sub-game** is a sub-tree of the extensive form that is independent: it is not linked by any dash lines that represent unknown information set to another sub-tree. For perfect information games, each sub-tree of the game tree is a sub-game.\n",
+    "\n",
+    "A **pure strategy** still consists in a function that maps each information set (each position, each configuration in the game tree) to an action, while a **behavioral strategy** maps each information set to a probability distributions on the possible moves.\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "### Sub-game perfect Nash equilibrium\n",
+    "\n",
+    "A sub-game perfect Nash equilibrium is a pair of strategies such that both players have no benefits in deviating form this strategy **at any information set**. This is different from a Nash equilibrium for which both players would have no benefits in deviating from the strategy on the **equilibrium path** (the path that leads to the outcome).\n",
+    "\n",
+    "The general idea to find such sub-game perfect Nash equilibrium for such games is that we can handle each sub-game separately by estimating the gain of the sub-games from the smallest to the biggest, in a process called as **backward induction** (or dynamic programming from programming perspective).\n",
+    "\n",
+    "For each sub-game, we replace the sub-game by the expected pay-off of the Nash equilibrum at the upper level (the surrounding sub-game) and bubble up this information until we reach the top. One interesting thing about perfect information game is that there is always one such equilibrium, and there is exactly one if none of the payoffs at the leaves are equal.\n",
+    "\n",
+    "**This process does not work for imperfect information games** because we cannot solve each game separatly, and the assumption that we can replace a sub-game by a payoff is not valid anymore.\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "### Zero sum game and minimax\n",
+    "\n",
+    "For zero sum games (or fixed sum payoff games), the backward induction shown below is totally equivalent to the **minimax algorithm**. Techniques such as alpha-beta pruning can be used to solve these games efficiently, and cut-offs and heuristics can be used to handle game trees that are too deep.\n",
+    "\n",
+    "For games with non-fixed payoff sum, we actually need to bubble up the payoff of both players, and each player is only interested in maximizing his own payoff.\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "### Pareto optimum, knowledge and order of play\n",
+    "\n",
+    "The order of play does not change the fact that Nash equilibrium do not necessarily correspond to the **pareto optimum**. For instance, in the prisonner's dilema, the outcome is not changed. The game might however becomes much less interesting for games such as:\n",
+    "\n",
+    "* Matching pennies: for which the second player will always win\n",
+    "* Battle of sexes: for which the first player will always get his/her preferred outcome\n",
+    "\n",
+    "The main change with sequential games is that the **belief of the other's strategy becomes a knowledge**. Player 2 knows the previous move of player 1, and player 1 can more easily understand what player 2 will do after its move as well. As a result, the equilibriums will likely change.\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "### Continuous action example\n",
+    "\n",
+    "If we go back to the game in which two companies fight for profit on the market by controlling their production $q_1$ and $q_2$, the game is now significantly changed because player 1 can move first and its move is known to player 2.\n",
+    "\n",
+    "Player 1 will maximize its benefit $b_1$, by looking in the future at what will be the price fixed by $q_2$. To do so, player 1 has to compute first what would be the optimal choice of play of player 2 depending on its information set (the quantity $q_1$ here):\n",
+    "\n",
+    "&emsp; $\\displaystyle b_2(q_2|q_1) = (100 - q_1 - q_2) \\, q_2 - c \\, q_2 \\implies \\nabla b_2 = 100 - q_1 - 2 q_2 - c = 0 \\implies q_2 = \\frac{100 - q_1 - c}{2}$\n",
+    "\n",
+    "Now player 1 can just maximize its benefits, based on the knowledge of this sub-strategy. Its benefit is therefore not conditioned on $q_2$ anymore because it can be replaced by anticipated value:\n",
+    "\n",
+    "&emsp; $\\displaystyle b_1(q_1) = (100 - q_1 - \\frac{100 - q_1 - c}{2}) \\, q_1 - c \\, q_1 \\implies \\nabla b_1 = 50 - q_1 - \\frac{c}{2} = 0 \\implies q_1 = \\frac{100 - c}{2}$\n",
+    "\n",
+    "For a cost of 10, it means producing 45 units for player 1 and 22.5 for player 2. As we can see, the results are completely different from playing the game simultaneously."
    ]
   },
   {
@@ -343,6 +412,7 @@
     "# Multi-stage / repeated games\n",
     "---\n",
     "\n",
+    "* one-stage un-improvable\n",
     "* accountability\n",
     "* should always finish by a nash equilibrium, but can bargain with it\n",
     "* if several nash equilibrium at the end, you can use that to bargain (depend on the discounting factor)\n"
