--- a/ml/0_basic_game_theory.ipynb
+++ b/ml/0_basic_game_theory.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -409,13 +409,26 @@
    "source": [
     "<br>\n",
     "\n",
+    "# Sequential imperfect information games\n",
+    "---\n",
+    "\n",
+    "* show the example : mutual assured destruction"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>\n",
+    "\n",
     "# Multi-stage / repeated games\n",
     "---\n",
     "\n",
     "* one-stage un-improvable\n",
     "* accountability\n",
     "* should always finish by a nash equilibrium, but can bargain with it\n",
-    "* if several nash equilibrium at the end, you can use that to bargain (depend on the discounting factor)\n"
+    "* if several nash equilibrium at the end, you can use that to bargain (depend on the discounting factor), cannot be used for prisoner's dilema (fixed number of games)\n",
+    "* if the game is infinite (propability to continue) it creates another equilibrium that can be used to bargain, even in the case of prisoner's dilema\n"
    ]
   },
   {
@@ -442,7 +455,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
