mutual assured destruction game

--- a/ml/0_basic_game_theory.ipynb
+++ b/ml/0_basic_game_theory.ipynb
@@ -412,7 +412,9 @@
     "# Sequential imperfect information games\n",
     "---\n",
     "\n",
-    "* show the example : mutual assured destruction"
+    "* show the example : mutual assured destruction\n",
+    "\n",
+    "![title](img/assured_mutual_destruction.svg)"
    ]
   },
   {
@@ -429,6 +431,68 @@
     "* should always finish by a nash equilibrium, but can bargain with it\n",
     "* if several nash equilibrium at the end, you can use that to bargain (depend on the discounting factor), cannot be used for prisoner's dilema (fixed number of games)\n",
     "* if the game is infinite (propability to continue) it creates another equilibrium that can be used to bargain, even in the case of prisoner's dilema\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>\n",
+    "\n",
+    "# Appendix: graphs\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'img/assured_mutual_destruction.svg'"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from graphviz import Digraph\n",
+    "\n",
+    "dot = Digraph(comment='Assured mutual destruction')\n",
+    "dot.attr(pad='0.5', ranksep='0.5', nodesep='0.8')\n",
+    "\n",
+    "dot.node('x0', '1', shape='circle')\n",
+    "with dot.subgraph() as s:\n",
+    "    s.node('y1', '2', shape='circle')\n",
+    "    s.node('y2', '0/0', shape='rectangle')\n",
+    "dot.node('x3', '10/-10', shape='rectangle')\n",
+    "dot.node('x4', '1', shape='circle')\n",
+    "dot.node('y5', '2', shape='circle')\n",
+    "dot.node('y6', '2', shape='circle')\n",
+    "dot.node('l1', '-5/-5', shape='rectangle')\n",
+    "dot.node('l2', '-100/-100', shape='rectangle')\n",
+    "dot.node('l3', '-100/-100', shape='rectangle')\n",
+    "dot.node('l4', '-100/-100', shape='rectangle')\n",
+    "\n",
+    "dot.edge('x0', 'y1', xlabel='escalate')\n",
+    "dot.edge('x0', 'y2', label='ignore')\n",
+    "dot.edge('y1', 'x3', xlabel='backdown')\n",
+    "dot.edge('y1', 'x4', label='confront')\n",
+    "dot.edge('x4', 'y5', xlabel='retreat')\n",
+    "dot.edge('x4', 'y6', label='nuclear')\n",
+    "dot.edge('y5', 'l1', label='retreat')\n",
+    "dot.edge('y5', 'l2', label='nuclear')\n",
+    "dot.edge('y6', 'l3', label='retreat')\n",
+    "dot.edge('y6', 'l4', label='nuclear')\n",
+    "\n",
+    "dot.edge('y5', 'y6', arrowhead='none', style='dashed', constraint='false')\n",
+    "\n",
+    "dot.format='svg'\n",
+    "dot.render('img/assured_mutual_destruction', view=True)  "
    ]
   },
   {
