--- a/ml/0_basic_game_theory.ipynb
+++ b/ml/0_basic_game_theory.ipynb
@@ -412,9 +412,9 @@
     "# Sequential imperfect information games\n",
     "---\n",
     "\n",
-    "* show the example : mutual assured destruction\n",
+    "Some games will mix the sequential and simultaneous game phases and are therefore imperfection information game (because some nodes have multiple information sets), as this game based on the Cuba crisis:\n",
     "\n",
-    "![title](img/assured_mutual_destruction.svg)"
+    "![title](img/mutual_destruction.svg)"
    ]
   },
   {
@@ -430,7 +430,9 @@
     "* accountability\n",
     "* should always finish by a nash equilibrium, but can bargain with it\n",
     "* if several nash equilibrium at the end, you can use that to bargain (depend on the discounting factor), cannot be used for prisoner's dilema (fixed number of games)\n",
-    "* if the game is infinite (propability to continue) it creates another equilibrium that can be used to bargain, even in the case of prisoner's dilema\n"
+    "* if the game is infinite (propability to continue) it creates another equilibrium that can be used to bargain, even in the case of prisoner's dilema\n",
+    "* grim-trigger notion\n",
+    "* folk theorem"
    ]
   },
   {
@@ -445,54 +447,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'img/assured_mutual_destruction.svg'"
+       "'img/mutual_destruction.svg'"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# https://www.graphviz.org/doc/info/attrs.html#d:sep\n",
     "from graphviz import Digraph\n",
     "\n",
+    "node_attr = dict(fontsize='10', height='0.1')\n",
+    "arr_attr = dict(fontsize='10', arrowsize='0.6')\n",
+    "\n",
     "dot = Digraph(comment='Assured mutual destruction')\n",
-    "dot.attr(pad='0.5', ranksep='0.5', nodesep='0.8')\n",
+    "dot.attr(pad='0.1', ranksep='0.3', nodesep='0.6', fontsize='6', imagescale='200')\n",
     "\n",
-    "dot.node('x0', '1', shape='circle')\n",
+    "dot.node('x0', '1', shape='circle', **node_attr)\n",
     "with dot.subgraph() as s:\n",
-    "    s.node('y1', '2', shape='circle')\n",
-    "    s.node('y2', '0/0', shape='rectangle')\n",
-    "dot.node('x3', '10/-10', shape='rectangle')\n",
-    "dot.node('x4', '1', shape='circle')\n",
-    "dot.node('y5', '2', shape='circle')\n",
-    "dot.node('y6', '2', shape='circle')\n",
-    "dot.node('l1', '-5/-5', shape='rectangle')\n",
-    "dot.node('l2', '-100/-100', shape='rectangle')\n",
-    "dot.node('l3', '-100/-100', shape='rectangle')\n",
-    "dot.node('l4', '-100/-100', shape='rectangle')\n",
+    "    s.node('y1', '2', shape='circle', **node_attr)\n",
+    "    s.node('y2', '0/0', shape='rectangle', **node_attr)\n",
+    "dot.node('x3', '10/-10', shape='rectangle', **node_attr)\n",
+    "dot.node('x4', '1', shape='circle', **node_attr)\n",
+    "dot.node('y5', '2', shape='circle', **node_attr)\n",
+    "dot.node('y6', '2', shape='circle', **node_attr)\n",
+    "dot.node('l1', '-5/-5', shape='rectangle', **node_attr)\n",
+    "dot.node('l2', '-100/-100', shape='rectangle', **node_attr)\n",
+    "dot.node('l3', '-100/-100', shape='rectangle', **node_attr)\n",
+    "dot.node('l4', '-100/-100', shape='rectangle', **node_attr)\n",
     "\n",
-    "dot.edge('x0', 'y1', xlabel='escalate')\n",
-    "dot.edge('x0', 'y2', label='ignore')\n",
-    "dot.edge('y1', 'x3', xlabel='backdown')\n",
-    "dot.edge('y1', 'x4', label='confront')\n",
-    "dot.edge('x4', 'y5', xlabel='retreat')\n",
-    "dot.edge('x4', 'y6', label='nuclear')\n",
-    "dot.edge('y5', 'l1', label='retreat')\n",
-    "dot.edge('y5', 'l2', label='nuclear')\n",
-    "dot.edge('y6', 'l3', label='retreat')\n",
-    "dot.edge('y6', 'l4', label='nuclear')\n",
+    "dot.edge('x0', 'y1', xlabel='escalate', **arr_attr)\n",
+    "dot.edge('x0', 'y2', label='ignore', **arr_attr)\n",
+    "dot.edge('y1', 'x3', xlabel='backdown', **arr_attr)\n",
+    "dot.edge('y1', 'x4', label='confront', **arr_attr)\n",
+    "dot.edge('x4', 'y5', xlabel='retreat', **arr_attr)\n",
+    "dot.edge('x4', 'y6', label='nuclear', **arr_attr)\n",
+    "dot.edge('y5', 'l1', label='retreat', **arr_attr)\n",
+    "dot.edge('y5', 'l2', label='nuclear', **arr_attr)\n",
+    "dot.edge('y6', 'l3', label='retreat', **arr_attr)\n",
+    "dot.edge('y6', 'l4', label='nuclear', **arr_attr)\n",
     "\n",
     "dot.edge('y5', 'y6', arrowhead='none', style='dashed', constraint='false')\n",
     "\n",
     "dot.format='svg'\n",
-    "dot.render('img/assured_mutual_destruction', view=True)  "
+    "dot.render('img/mutual_destruction', view=True)"
    ]
   },
   {
