mutual destruction game

--- a/ml/0_basic_game_theory.ipynb
+++ b/ml/0_basic_game_theory.ipynb
@@ -349,23 +349,23 @@
     "\n",
     "<br>\n",
     "\n",
-    "### Sub-games\n",
+    "### Sub-game perfect Nash equilibrium\n",
     "\n",
     "A **sub-game** is a sub-tree of the extensive form that is independent: it is not linked by any dash lines that represent unknown information set to another sub-tree. For perfect information games, each sub-tree of the game tree is a sub-game.\n",
     "\n",
     "A **pure strategy** still consists in a function that maps each information set (each position, each configuration in the game tree) to an action, while a **behavioral strategy** maps each information set to a probability distributions on the possible moves.\n",
     "\n",
+    "A sub-game perfect Nash equilibrium is a pair of strategies such that both players have no benefits in deviating form this strategy **at any information set**. This is different from a Nash equilibrium for which both players would have no benefits in deviating from the strategy on the **equilibrium path** (the path that leads to the outcome).\n",
+    "\n",
     "<br>\n",
     "\n",
-    "### Sub-game perfect Nash equilibrium\n",
-    "\n",
-    "A sub-game perfect Nash equilibrium is a pair of strategies such that both players have no benefits in deviating form this strategy **at any information set**. This is different from a Nash equilibrium for which both players would have no benefits in deviating from the strategy on the **equilibrium path** (the path that leads to the outcome).\n",
+    "### Backward induction\n",
     "\n",
     "The general idea to find such sub-game perfect Nash equilibrium for such games is that we can handle each sub-game separately by estimating the gain of the sub-games from the smallest to the biggest, in a process called as **backward induction** (or dynamic programming from programming perspective).\n",
     "\n",
     "For each sub-game, we replace the sub-game by the expected pay-off of the Nash equilibrum at the upper level (the surrounding sub-game) and bubble up this information until we reach the top. One interesting thing about perfect information game is that there is always one such equilibrium, and there is exactly one if none of the payoffs at the leaves are equal.\n",
     "\n",
-    "**This process does not work for imperfect information games** because we cannot solve each game separatly, and the assumption that we can replace a sub-game by a payoff is not valid anymore.\n",
+    "This process does not work quite the same for imperfect information games because we cannot solve each game separatly, and the assumption that we can replace a sub-game by a single payoff is not valid anymore.\n",
     "\n",
     "<br>\n",
     "\n",
@@ -414,7 +414,37 @@
     "\n",
     "Some games will mix the sequential and simultaneous game phases and are therefore imperfection information game (because some nodes have multiple information sets), as this game based on the Cuba crisis:\n",
     "\n",
-    "![title](img/mutual_destruction.svg)"
+    "* The player 1 (US) can escalate to oppose the missiles in Cuba or ignore the threat\n",
+    "* The player 2 (USSR) can backdown faced to escalation or confront the US\n",
+    "* At this points, both player can nuke or retreat: if any one nukes, the world is doomed\n",
+    "\n",
+    "![title](img/mutual_destruction.svg)\n",
+    "\n",
+    "To follow the logic of backward induction and sub-game perfect equilibriums, we must start from the end of the extended form and solve the following normal form game:\n",
+    "\n",
+    "<table style=\"text-align:center;width:250px;margin-left:100px;margin-right:100px\">\n",
+    "  <tr>\n",
+    "    <th></th>\n",
+    "    <th>Retreat</th>\n",
+    "    <th>Nuke</th>\n",
+    "  </tr>\n",
+    "  <tr>\n",
+    "    <th>Retreat</th>\n",
+    "    <td>-5/-5</td>\n",
+    "    <td>-100/-100</td>\n",
+    "  </tr>\n",
+    "  <tr>\n",
+    "    <th>Nuke</th>\n",
+    "    <td>-100/-100</td>\n",
+    "    <td>-100/-100</td>\n",
+    "  </tr>\n",
+    "</table>\n",
+    "\n",
+    "The first Nash equilibrium here is mutual destruction (Nuke/Nuke), and so we can bubble up that information, to get the following simplified game in which we see that the player 1 should escalate and blocade Cuba:\n",
+    "\n",
+    "![title](img/mutual_destruction_2.svg)\n",
+    "\n",
+    "The second Nash equilibrium is mutual retreat. If the player 1 believes that this will be the outcome of the last game, he should ignore the threat and let the player 2 put the missiles on Cuba."
    ]
   },
   {
@@ -447,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -456,7 +486,7 @@
        "'img/mutual_destruction.svg'"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -489,16 +519,54 @@
     "dot.edge('y1', 'x3', xlabel='backdown', **arr_attr)\n",
     "dot.edge('y1', 'x4', label='confront', **arr_attr)\n",
     "dot.edge('x4', 'y5', xlabel='retreat', **arr_attr)\n",
-    "dot.edge('x4', 'y6', label='nuclear', **arr_attr)\n",
+    "dot.edge('x4', 'y6', label='nuke', **arr_attr)\n",
     "dot.edge('y5', 'l1', label='retreat', **arr_attr)\n",
-    "dot.edge('y5', 'l2', label='nuclear', **arr_attr)\n",
+    "dot.edge('y5', 'l2', label='nuke', **arr_attr)\n",
     "dot.edge('y6', 'l3', label='retreat', **arr_attr)\n",
-    "dot.edge('y6', 'l4', label='nuclear', **arr_attr)\n",
+    "dot.edge('y6', 'l4', label='nuke', **arr_attr)\n",
     "\n",
     "dot.edge('y5', 'y6', arrowhead='none', style='dashed', constraint='false')\n",
     "\n",
     "dot.format='svg'\n",
     "dot.render('img/mutual_destruction', view=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'img/mutual_destruction_2.svg'"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "node_attr = dict(fontsize='10', height='0.1')\n",
+    "arr_attr = dict(fontsize='10', arrowsize='0.6')\n",
+    "\n",
+    "dot = Digraph(comment='Assured mutual destruction')\n",
+    "dot.attr(pad='0.1', ranksep='0.3', nodesep='0.6', fontsize='6', imagescale='200')\n",
+    "\n",
+    "dot.node('x0', '1', shape='circle', **node_attr)\n",
+    "dot.node('y1', '2', shape='circle', **node_attr)\n",
+    "dot.node('y2', '0/0', shape='rectangle', **node_attr)\n",
+    "dot.node('x3', '10/-10', shape='rectangle', **node_attr)\n",
+    "dot.node('x4', '-100/100', shape='rectangle', **node_attr)\n",
+    "\n",
+    "dot.edge('x0', 'y1', xlabel='escalate', **arr_attr)\n",
+    "dot.edge('x0', 'y2', label='ignore', **arr_attr)\n",
+    "dot.edge('y1', 'x3', xlabel='backdown', **arr_attr)\n",
+    "dot.edge('y1', 'x4', label='confront', **arr_attr)\n",
+    "\n",
+    "dot.format='svg'\n",
+    "dot.render('img/mutual_destruction_2', view=True)"
    ]
   },
   {
